compiler/testData/diagnostics/tests/Kt60343.kt
fun <T> test(x: Any) {
    <!UNRESOLVED_REFERENCE!>println<!>(<!RESOLUTION_TO_CLASSIFIER!>T<!><T>)
}
